projects: move the search box to the left

--- a/salvus/page/projects.css
+++ b/salvus/page/projects.css
@@ -46,8 +46,8 @@
 }
 
 .projects-describe-listing {
-    margin-bottom: 1em;
-    margin-top: 1.5em;
+    margin-bottom: 1ex;
+    margin-top: 1ex;
     font-weight:bold;
     font-size:15pt;
 }
