--- a/salvus/page/activity.css
+++ b/salvus/page/activity.css
@@ -78,6 +78,10 @@
     color: #888;
 }
 
+.salvus-notification-action-icon-comment {
+    color:darkred;
+}
+
 .salvus-notification-path-icon {
     font-size: 16pt;
     color: #888;
@@ -96,4 +100,9 @@
 .salvus-notification-desc {
     max-height: 3em;
     overflow: hidden;
+}
+
+.salvus-notification-commented {
+    color: darkred;
+    font-weight: bold;
 }
