topbar: help on the right side and using the favicon

--- a/salvus/page/top_navbar.css
+++ b/salvus/page/top_navbar.css
@@ -40,6 +40,12 @@
     border-left: 1px solid #f2f2f2;
 }
 
+.navbar .button-label > img {
+    height: 22px;
+    padding-right: 4px;
+    vertical-align: bottom;
+}
+
 .salvus-connection-status {
     width       : 6.5em;
     font-size   : 10pt;
