navbars: 1px fix (to get rid of the white 1px line below navbars) and disabling user-selectable text inside of button labels (not all, but many)

--- a/salvus/page/top_navbar.css
+++ b/salvus/page/top_navbar.css
@@ -131,6 +131,15 @@
     white-space: nowrap;
 }
 
+.button-label,
+.project-pages-button-label {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 @media (max-width: 767px) {
     .navbar-nav.pull-right, .navbar-nav.pull-left {
         float: none !important;
