--- a/salvus/page/index.css
+++ b/salvus/page/index.css
@@ -211,6 +211,12 @@ input[type="password"], select {
     margin-bottom: 4px;
 }
 
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+    position: relative;
+    top: 1px;
+}
+
 
 /* Make math visible even when there is a dark background.  Since mathjax is always black, this
    helps a lot.  Obviously, it isn't perfect, but it is better than USELESS. '*/
