sass: copying all *.sass source files to server and properly reference from css source mapping file

--- a/salvus/page/_account.sass
+++ b/salvus/page/_account.sass
@@ -6,7 +6,7 @@
 .account-error-text
   color: #ff0000
 
-.salvus-password-meter!
+// .salvus-password-meter!
 
 .salvus_client_warning
   position: fixed
