--- a/salvus/page/_activity.sass
+++ b/salvus/page/_activity.sass
@@ -57,7 +57,7 @@
 .salvus-notification-read
   background: #fefefe
 
-.salvus-notification-list-search!
+// .salvus-notification-list-search!
 
 .salvus-notification-action-icon
   font-size: 16pt
