--- a/salvus/page/_course.sass
+++ b/salvus/page/_course.sass
@@ -45,7 +45,7 @@
   text-decoration: line-through
   opacity: .6
 
-.salvus-course-student-first_name!, .salvus-course-student-last_name!
+// .salvus-course-student-first_name!, .salvus-course-student-last_name!
 
 .salvus-course-student-email_address
   font-family: monospace
