--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -126,7 +126,7 @@
   font-size: 9pt
   margin: 5px
 
-.salvus-editor-pdf-preview!
+// .salvus-editor-pdf-preview!
 
 .salvus-editor-pdf-preview-page
   background-color: #eee
@@ -223,7 +223,7 @@
   position: absolute
   resize: none
 
-.salvus-chat-entry!
+// .salvus-chat-entry!
 
 .salvus-chat-header
   padding-top: 3px
@@ -275,7 +275,7 @@
 .sagews-input-evaluated
   background: #428bca
 
-.sagews-input-unevaluated!
+// .sagews-input-unevaluated!
 
 .sagews-input-execute
   background: #080
@@ -334,7 +334,7 @@
   background: #eee
   padding: 4px
 
-.sagews-output-interact!
+// .sagews-output-interact!
 
 .salvus-editor-image
   position: fixed
