--- a/salvus/page/_misc_page.sass
+++ b/salvus/page/_misc_page.sass
@@ -14,7 +14,7 @@
     margin: 3px
     font-family: monospace
 
-.salvus-codemirror-introspect-title!
+// .salvus-codemirror-introspect-title
 
 .salvus-codemirror-introspect-content-source-code
   white-space: pre
