--- a/salvus/page/_project.sass
+++ b/salvus/page/_project.sass
@@ -115,7 +115,7 @@
   font-size: 14pt
   color: #aaa
 
-.project-directory-name!
+// .project-directory-name!
 
 .project-directory-link-style
   background-color: #ffffff
@@ -312,7 +312,7 @@
 .project-file-list-sort-order
   margin-left: 2em
 
-.salvus-project-search-for-file-input-container!
+//.salvus-project-search-for-file-input-container!
 
 .project-listing-search-include
   /* border  : 2px solid #08c;
