--- a/salvus/page/_slideshow.sass
+++ b/salvus/page/_slideshow.sass
@@ -8,7 +8,7 @@
 .salvus-slideshow-pages
   border: 1px solid #888
 
-.salvus-slideshow-title!
+// .salvus-slideshow-title!
 
 .salvus-slideshow-description
   color: #888
