--- a/salvus/page/_tasks.sass
+++ b/salvus/page/_tasks.sass
@@ -184,12 +184,12 @@
   margin: 0
   line-height: 0
 
-.salvus-tasks-hashtag-button!
+// .salvus-tasks-hashtag-button!
 
 .salvus-tasks-first
   cursor: pointer
 
-.salvus-task-active-button!
+// .salvus-task-active-button!
 
 .salvus-task-checkbox
   cursor: pointer
