sass: fixing comments, trailing */ and similar (improper endings do work, but confuses FFs debugger)

--- a/salvus/page/_3d.sass
+++ b/salvus/page/_3d.sass
@@ -14,7 +14,7 @@
 .salvus-3d-dynamic-renderer
   border: 2px solid #08c
   border-radius: 3px
-  /*box-shadow     : 3px 3px 6px #aaa;
+  // box-shadow     : 3px 3px 6px #aaa;
 
 .salvus-3d-static-renderer
   border: 2px solid lightgrey
