--- a/salvus/page/_console.sass
+++ b/salvus/page/_console.sass
@@ -39,13 +39,13 @@
   color: #fff
 
 .salvus-console-terminal
-  /* font-family: Courier, "Courier New", monospace;
+  /* font-family: Courier, "Courier New", monospace; */
   font-family: droid-sans-mono
-  /* really set in console.coffee, overriding this!
+  /* really set in console.coffee, overriding this! */
   padding: 1ex
   margin: 0px
   white-space: nowrap
-  /* critical at least for firefox and IE
+  /* critical at least for firefox and IE */
 
 .salvus-console-scrollbar
   position: absolute
@@ -66,7 +66,7 @@
   -o-animation: salvus-cursor-blink 1.3s linear 0s infinite
   background: #000
   color: #fff
-  /* Fallback for browsers without animation support
+  /* Fallback for browsers without animation support */
 
 @-webkit-keyframes salvus-cursor-blink
   0%, 40%
@@ -112,6 +112,7 @@
   position: fixed
   /*
    *  height:15px; width: 50px; border: 1px solid red;
+   */
 
 .salvus-console-focus
   background-color: #ffffe8
