--- a/salvus/page/_course.sass
+++ b/salvus/page/_course.sass
@@ -56,7 +56,7 @@
 .salvus-course-assignment-deleted
   text-decoration: line-through
   opacity: .6
-  /* since changing color is ugly
+  /* since changing color is ugly */
 
 .salvus-course-assignment-path
   cursor: pointer
