--- a/salvus/page/_interact.sass
+++ b/salvus/page/_interact.sass
@@ -1,5 +1,5 @@
 .salvus-interact-container
-  /*background-color:#fff;
+  // background-color:#fff;
   padding: 1ex
   border: 1px solid #ccc
   border-radius: 3px
@@ -8,11 +8,11 @@
   padding-right: 20px
 
 .salvus-interact-control-grid
-  /* border : 1px solid grey;
+  // border : 1px solid grey;
   display: inline-block
   margin: 1ex
   padding: 1ex
-  /* box-shadow: 3px 3px 1px #ccc;
+  // box-shadow: 3px 3px 1px #ccc;
 
 .salvus-interact-control-selector-buttonbox
   background-color: #f0f0f0
