--- a/salvus/page/_misc_page.sass
+++ b/salvus/page/_misc_page.sass
@@ -29,13 +29,14 @@
   margin-left: 2em
   margin-right: 2em
 
-/* See https://github.com/twitter/bootstrap/issues/2764
+// See https://github.com/twitter/bootstrap/issues/2764
 
 .nav-tabs > .disabled > a, .nav-pills > .disabled > a
   color: #999
   cursor: pointer
   border: none
-  /** add this for tabs/pills *
+  // add this for tabs/pills *
 
-.nav-tabs > .disabled > a:hover, .nav-pills > .disabled > a:hover
+.nav-tabs > .disabled > a:hover,
+.nav-pills > .disabled > a:hover
   background-color: transparent
