--- a/salvus/page/_project.sass
+++ b/salvus/page/_project.sass
@@ -2,7 +2,7 @@
   padding-top: 0
   margin-top: 0
   top: 43px
-  /* Top navbar height = 42px
+  // Top navbar height = 42px
   width: 100%
 
 .first-entry
@@ -47,6 +47,7 @@
 .project-file-listing-container
   /* overflow-y: auto;
    *overflow-x: hidden;
+   */
 
 .project-file-listing, .project-new-file, .project-activity, .project-settings, .project-search
   clear: both
@@ -83,7 +84,7 @@
   padding-top: 1px
 
 .project-file-link-style
-  /*border-bottom    : 1px solid #eee;
+  // border-bottom    : 1px solid #eee;
   cursor: pointer
   &:hover
     background-color: #efe
@@ -144,7 +145,7 @@
   margin-left: 5px
   > li > a
     padding: 8px 10px
-    /* BS3 increased this, which is no good
+    // BS3 increased this, which is no good
 
 .salvus-project-status-indicator-button
   width: 10%
@@ -156,7 +157,7 @@
 .project-search-output
   background-color: white
   font-family: monospace
-  /* overflow-y: auto;
+  // overflow-y: auto;
 
 .project-search-output-command
   background-color: white
@@ -248,7 +249,7 @@
   background-color: #fff
   color: #333
   font-size: 12px
-  /*max-height:20em;
+  // max-height:20em;
   width: 100%
   overflow-y: auto
   min-height: 3em
@@ -260,7 +261,7 @@
   background-color: #fcc
   color: #922
   font-size: 12px
-  /*max-height:20em;
+  // max-height:20em;
   width: 100%
   overflow-y: auto
   min-height: 3em
@@ -281,7 +282,7 @@
   color: #666
   font-size: 10pt
   font-family: monospace
-  /* cursor      : pointer;
+  // cursor      : pointer;
 
 .project-commit-message-input, .project-commit-command-input
   width: 100%
@@ -315,7 +316,7 @@
 //.salvus-project-search-for-file-input-container!
 
 .project-listing-search-include
-  /* border  : 2px solid #08c;
+  // border  : 2px solid #08c;
   z-index: 10
 
 .project-listing-search-exclude
@@ -326,7 +327,7 @@
   margin: 0
   padding: 0
   margin-top: -13px
-  /* So they overlap
+  // So they overlap
 
 .project-search-output-further-results
   font-weight: bold
