--- a/salvus/page/_scratch.sass
+++ b/salvus/page/_scratch.sass
@@ -16,7 +16,7 @@
   padding: 5px
 
 .sage-cell
-  /* background-color: lightyellow;
+  // background-color: lightyellow;
   background-color: #f88
 
 .sage-cell-input!
