--- a/salvus/page/_slideshow.sass
+++ b/salvus/page/_slideshow.sass
@@ -72,8 +72,8 @@
   .CodeMirror-nonmatchingbracket
     color: #f22 !important
 
-/**********************************************************
-/* Fix so CodeMirror works inside a deck.js presentation
-/**********************************************************
-
-/**********************************************************
+//**********************************************************
+//* Fix so CodeMirror works inside a deck.js presentation
+//**********************************************************
+//
+//**********************************************************
