--- a/salvus/page/_tasks.sass
+++ b/salvus/page/_tasks.sass
@@ -37,6 +37,7 @@
     /*border-radius: 3px;
      *border-color: #51a7e8;
      *box-shadow: inset 0 0 5px rgba(81,167,232,0.5);
+     */
 
 .salvus-tasks-desc-edit
   width: 100%
@@ -94,7 +95,7 @@
   cursor: pointer
 
 .salvus-tasks-header
-  /* border-right: 1px solid grey;
+  // border-right: 1px solid grey;
   padding-right: 10px
 
 .salvus-task-header-current
@@ -127,7 +128,7 @@
   color: #888
   font-size: 17pt
   margin-left: 0 !important
-  /* undo the pull-right bootstrap style
+  // undo the pull-right bootstrap style
   &:hover
     color: #51a7e8
 
