--- a/salvus/page/_top_navbar.sass
+++ b/salvus/page/_top_navbar.sass
@@ -10,7 +10,7 @@
   font-size: 18px
 
 .nav-projects-placeholder
-  /* No more box shadow
+  // No more box shadow
 
 .nav
   &.projects li.ui-sortable-helper
@@ -21,7 +21,7 @@
     float: right
   &.projects
     float: none !important
-    /* override Bootstrap 3
+    // override Bootstrap 3
     overflow: hidden
 
 .navbar
@@ -51,7 +51,7 @@
   margin-bottom: 0
   min-height: 0
   opacity: .85
-  /* avoid confusion when project scrolls up and is covered by top bar
+  // avoid confusion when project scrolls up and is covered by top bar
 
 .salvus-top_navbar-tab-active
   color: rgb(116, 92, 46)
