--- a/salvus/page/_worksheet-cm.sass
+++ b/salvus/page/_worksheet-cm.sass
@@ -4,12 +4,15 @@
  *    height: 30em;
  *    background-color: #fffffa;
  *    border-radius: 3px;
- *    box-shadow: 3px 3px 1px #888;  
+ *    box-shadow: 3px 3px 1px #888;
  *}
+ */
+
 /*.CodeMirror-scroll {
  *    overflow-y: hidden;
  *    overflow-x: auto;
  *}
+ */
 
 .worksheet-cm-stdout-background
   background-color: lightyellow
@@ -40,4 +43,4 @@
 
 .worksheet-cm-output-gutter
   background-color: lightyellow
-  /*   border:solid 1px grey;
+  //   border:solid 1px grey;
