--- a/salvus/page/_worksheet.sass
+++ b/salvus/page/_worksheet.sass
@@ -1,7 +1,7 @@
 .salvus-worksheet
   padding: 0px
   margin: 0px
-  /* background-color: #fdf6e3;
+  // background-color: #fdf6e3;
   background-color: #fff
   border-top: 2px solid #eee
 
@@ -11,10 +11,10 @@
 
 .salvus-worksheet-running
   border-top: 2px solid red
-  /* background-color:#efe;
+  // background-color:#efe;
 
 .salvus-worksheet-cells
-  /* border   : 1px solid #888;
+  // border   : 1px solid #888;
 
 .salvus-worksheet-filename
   font-size: 14pt
