--- a/salvus/page/_worksheet1.sass
+++ b/salvus/page/_worksheet1.sass
@@ -30,7 +30,7 @@ pre
   margin: 0px
 
 .salvus-cell1
-  /* border-top:1px dashed #ddd;
+  /* border-top:1px dashed #ddd; */
 
 .salvus-cell1-note
   background-color: #fff
@@ -51,7 +51,7 @@ pre
   color: #080
   padding-left: 1ex
 
-.salvus-prompt:hover!, .salvus-cell1-input!
+// .salvus-prompt:hover!, .salvus-cell1-input!
 
 .salvus-cell1-output
   padding-left: 30px
@@ -85,12 +85,13 @@ pre
 .salvus-tex
   color: #00a
 
-.salvus-worksheet1-buttons!, .salvus-worksheet1-title!
+// .salvus-worksheet1-buttons!, .salvus-worksheet1-title!
 
 .salvus-worksheet1-description
   color: #888
 
-.salvus-cell1-insert-before, .salvus-cell1-insert-after
+.salvus-cell1-insert-before,
+.salvus-cell1-insert-after
   height: 6px
   &:hover
     border: 2px solid #99f
@@ -134,7 +135,8 @@ pre
   color: #888
   background-color: #ccc
 
-.salvus-worksheet1-docstring, .salvus-worksheet1-source-code
+.salvus-worksheet1-docstring,
+.salvus-worksheet1-source-code
   font-family: "Courier New"
   background-color: #fffffa
   white-space: pre
@@ -151,12 +153,13 @@ pre
   background-color: #bbb
   border: 1px solid black
 
-.salvus-worksheet1-edit-jsoneditor, .salvus-worksheet1-edit-jsonformatter
+.salvus-worksheet1-edit-jsoneditor,
+.salvus-worksheet1-edit-jsonformatter
   box-shadow: 8px 8px 4px #888
   border: 1px solid black
   background-color: #fff
   height: 400px
-  /* todo -- set dynamically
+  // todo -- set dynamically
 
 .salvus-worksheet1-edit-error
   background-color: #fcc
