--- a/salvus/page/index.sass
+++ b/salvus/page/index.sass
@@ -60,7 +60,7 @@
 body
   padding-top: 43px
 
-/* mezzo-small, larger than xs, smaller than sm, like the old tasklist button size
+/* mezzo-small, larger than xs, smaller than sm, like the old tasklist button size */
 
 .btn-ms
   padding-bottom: 2px
@@ -80,7 +80,7 @@ body
     position: relative !important
     top: 0px !important
 
-/* so on iOS scroll-into-view modals work
+/* so on iOS scroll-into-view modals work */
 @media (max-width: 480px)
   .modal.fade.in
     top: 10px
@@ -88,6 +88,7 @@ body
 /* This is a hack to accurately determine if the screen is displaying in responsive mode.
  * When responsive mode, .salvus-responsive-mode-test will have a width of 767px and in full size the
  * width will be 10000px.
+ */
 @media (max-width: 767px)
   .salvus-responsive-mode-test
     width: 767px
@@ -106,11 +107,12 @@ body
  *  width:1ex !important;
  *  opacity:0.5;
  *}
+ */
 
 .CodeMirror, .CodeMirror-wrap
   line-height: normal
 
-/* see http://stackoverflow.com/questions/271067/how-can-i-make-a-textarea-100-width-without-overflowing-when-padding-is-present
+/* see http://stackoverflow.com/questions/271067/how-can-i-make-a-textarea-100-width-without-overflowing-when-padding-is-present  */
 
 .boxsizingBorder
   -webkit-box-sizing: border-box
@@ -123,7 +125,7 @@ body
   margin: -3px
   border-radius: 3px
 
-/* fix bootstrap ugliness
+/* fix bootstrap ugliness  */
 
 code
   color: #444
@@ -165,11 +167,12 @@ input[type="text"], select, input[type="email"], select, input[type="password"],
 
 /* Make math visible even when there is a dark background.  Since mathjax is always black, this
  * helps a lot.  Obviously, it isn't perfect, but it is better than USELESS. '
+ */
 
 .MathJax_SVG_Display
   background: white
 
-/* From http://stackoverflow.com/questions/13955163/imitating-a-blink-tag-with-css3-animations
+/* From http://stackoverflow.com/questions/13955163/imitating-a-blink-tag-with-css3-animations  */
 
 .blink
   animation: blink 1s steps(5, start) infinite
