--- a/salvus/page/_cell.sass
+++ b/salvus/page/_cell.sass
@@ -14,6 +14,7 @@
   /*border-left      : 2px solid #e0e0e0;
    *border-top      : 2px solid white;
    *border-bottom      : 2px solid white;
+   */
   margin-left: 1em
   margin-right: 1em
   border: 2px solid #fff
@@ -22,12 +23,12 @@
   min-height: 1.5em
   border: 2px solid #99f
   border-radius: 5px
-  /*box-shadow: 3px 3px 1px #bbf;
+  /*box-shadow: 3px 3px 1px #bbf; */
 
 .salvus-cell-output
-  /* background-color : #fff; #fafafa;
-  /*overflow-y       : auto;
-  /* overflow-x       : auto;
+  /* background-color : #fff; #fafafa; */
+  /*overflow-y       : auto; */
+  /* overflow-x       : auto; */
   margin-left: 79px
   padding: 0ex
   margin-right: 1em
@@ -42,12 +43,12 @@
   color: #a00
   white-space: pre
 
-.salvus-cell-output-html!, .salvus-cell-output-tex!
+// .salvus-cell-output-html!, .salvus-cell-output-tex!
 
 .salvus-cell-output-interact
   padding: 1em
   margin: 1em
-  /* background-color: #fff;
+  /* background-color: #fff; */
   border: 1px solid #e0e0e0
   box-shadow: 3px 3px 3px 3px #ccc
 
@@ -55,9 +56,9 @@
   position: absolute
   margin-left: 0em
   margin-top: -1ex
-  /*    border: 1px solid #white;
+  /*    border: 1px solid #white; */
   &:hover
-    /*    border: 1px dashed #888;
+    /*    border: 1px dashed #888; */
 
 .salvus-cell-stopwatch
   margin-left: 0em
