public: add support for static html files

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -360,6 +360,13 @@
   font-weight: bold
   color: #555
 
+
+.salvus-editor-static-html
+  overflow-y: auto;
+  margin-right: 1em;
+  margin-left: 1em;
+  border: 1px solid lightgray;
+
 .salvus-ipython-notebook
   background: white
   position: fixed
