--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -361,10 +361,12 @@
   color: #555
 
 
-.salvus-editor-static-html
+.salvus-editor-static-html-content
   overflow-y: auto;
-  margin-right: 1em;
-  margin-left: 1em;
+  margin: 1em;
+  border: 1px solid lightgray;
+
+.salvus-editor-ipython-nbviewer-content
   border: 1px solid lightgray;
 
 .salvus-ipython-notebook
