sagews: add an edit button to output widgets and make edit put cursor in cell focus; this is much easier to discover than double click; double click also now ensures editing rather than toggline.

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -301,6 +301,13 @@
   border-left: 3px solid orange
   margin-left: -4px
 
+.sagews-output-edit-button
+  visibility: hidden
+  margin-top: -6px;
+
+.sagews-output:hover .sagews-output-edit-button
+  visibility: visible
+
 .sagews-output-html
   font-family: helvetica
   /*padding-left: 2em;
