sagews-editor: snapshot of work in progress (which is working)

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -301,12 +301,20 @@
   border-left: 3px solid orange
   margin-left: -4px
 
-.sagews-output-edit-button
+.sagews-output-edit-button-group
   visibility: hidden
-  margin-top: -6px;
 
-.sagews-output:hover .sagews-output-edit-button
+.sagews-output:hover .sagews-output-edit-button-group
   visibility: visible
+
+.sagews-output-editor
+  font-family: helvetica
+  min-height:40em    
+
+.sagews-output-editor-buttons
+  background-color: #efefef;
+  margin-bottom: 5px;
+  border: 1px solid lightgrey;
 
 .sagews-output-html
   font-family: helvetica
