sagews editor: mostly adding support for markdown

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -309,12 +309,14 @@
 
 .sagews-output-editor
   font-family: helvetica
-  min-height:40em    
+  /* min-height:40em     */
 
 .sagews-output-editor-buttons
   background-color: #efefef;
   margin-bottom: 5px;
   border: 1px solid lightgrey;
+
+/* .sagews-output-editor-content */
 
 .sagews-output-html
   font-family: helvetica
