sagews-editor: color support; get rid of use of rangy.

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -318,6 +318,11 @@
 
 /* .sagews-output-editor-content */
 
+.sagews-output-editor-color-selector
+  cursor: pointer
+  width: 17ex
+  height: 30px
+
 .sagews-output-html
   font-family: helvetica
   /*padding-left: 2em;
