sagews-editor: move html editing controls to top.

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -296,7 +296,6 @@
   padding: 1ex
   padding-right: 0px
   margin: 0px
-  overflow-y: auto
   white-space: normal
   border-left: 3px solid orange
   margin-left: -4px
@@ -309,6 +308,8 @@
 
 .sagews-output-editor
   font-family: helvetica
+  border-left: 3px solid blue;
+  padding-left: 5px;
   /* min-height:40em     */
 
 .sagews-output-editor-buttons
@@ -320,7 +321,7 @@
 
 .sagews-output-editor-color-selector
   cursor: pointer
-  width: 17ex
+  width: 120px
   height: 30px
 
 .sagews-output-html
