html-editor: change background color of selected text

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -319,7 +319,12 @@
 
 /* .sagews-output-editor-content */
 
-.sagews-output-editor-color-selector
+.sagews-output-editor-foreground-color-selector
+  cursor: pointer
+  width: 120px
+  height: 30px
+
+.sagews-output-editor-background-color-selector
   cursor: pointer
   width: 120px
   height: 30px
