html-editor: working selection "control" that basically works on ie, safari, firefox, chrome.

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -308,9 +308,14 @@
 
 .sagews-output-editor
   font-family: helvetica
-  border-left: 3px solid blue;
+  border: 3px solid lightgrey;
   padding-left: 5px;
-  /* min-height:40em     */
+
+.sagews-output-editor-content
+  padding: 6px;
+
+.sagews-output-editor-focus
+  border: 3px solid blue;
 
 .sagews-output-editor-buttons
   background-color: #efefef;
