--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -308,14 +308,10 @@
 
 .sagews-output-editor
   font-family: helvetica
-  border: 3px solid lightgrey;
-  padding-left: 5px;
+  border: 3px solid lightblue;
 
 .sagews-output-editor-content
   padding: 6px;
-
-.sagews-output-editor-focus
-  border: 3px solid blue;
 
 .sagews-output-editor-buttons
   background-color: #efefef;
