html-edit: make color selectors ok

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -318,16 +318,18 @@
   margin-bottom: 5px;
   border: 1px solid lightgrey;
 
+.salvus-editor-codemirror-worksheet-editable-buttons
+  padding-top: 3px;
 /* .sagews-output-editor-content */
 
 .sagews-output-editor-foreground-color-selector
   cursor: pointer
-  width: 120px
+  width: 1px
   height: 30px
 
 .sagews-output-editor-background-color-selector
   cursor: pointer
-  width: 120px
+  width: 1px
   height: 30px
 
 .sagews-output-html
