--- a/salvus/page/index.sass
+++ b/salvus/page/index.sass
@@ -128,7 +128,10 @@ body
 /* fix bootstrap ugliness  */
 
 code
-  color: #444
+  color: #444 !important
+  background-color: #f9f2f4 !important
+  padding-left: 2px !important
+  padding-right: 2px !important
 
 blockquote p
   font-size: 15px
