html-edit: formula editor using textarea (in prep for codemirror)

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -308,19 +308,25 @@
 
 .sagews-output-editor
   font-family: helvetica
-  border: 3px solid lightblue;
+  border: 3px solid lightblue
 
 .sagews-output-editor-content
   padding: 6px;
 
 .sagews-output-editor-buttons
-  background-color: #efefef;
-  margin-bottom: 5px;
-  border: 1px solid lightgrey;
+  background-color: #efefef
+  margin-bottom: 5px
+  border: 1px solid lightgrey
 
 .salvus-editor-codemirror-worksheet-editable-buttons
   padding-top: 3px;
 /* .sagews-output-editor-content */
+
+.salvus-editor-mathjax-editor
+  border: 1px solid lightblue !important
+  cursor: pointer
+  padding: 3px !important
+
 
 .sagews-output-editor-foreground-color-selector
   cursor: pointer
