html-editor: better spacing around equations, so can move cursor around

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -327,6 +327,9 @@
   cursor: pointer
   padding: 3px !important
 
+.sagews-editor-latex-raw
+  border: 1px solid lightblue
+  padding: 3px
 
 .sagews-output-editor-foreground-color-selector
   cursor: pointer
