html-editor: use codemirror for latex equation editing.

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -322,14 +322,19 @@
   padding-top: 3px;
 /* .sagews-output-editor-content */
 
+/*  border: 1px solid lightgrey !important; padding: 3px !important */
 .salvus-editor-mathjax-editor
-  border: 1px solid lightblue !important
   cursor: pointer
-  padding: 3px !important
+  
 
 .sagews-editor-latex-raw
-  border: 1px solid lightblue
-  padding: 3px
+  border     : 1px solid lightgrey
+  padding    : 3px
+  box-shadow : 3px 3px 3px 3px #888888
+  margin     : 0 auto
+
+.sagews-editor-latex-preview
+  border: 1px solid black;
 
 .sagews-output-editor-foreground-color-selector
   cursor: pointer
