html-edit: mostly stable/done

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -320,12 +320,12 @@
 
 .salvus-editor-codemirror-worksheet-editable-buttons
   padding-top: 3px;
-/* .sagews-output-editor-content */
 
-/*  border: 1px solid lightgrey !important; padding: 3px !important */
 .salvus-editor-mathjax-editor
-  cursor: pointer
-  
+  cursor      : pointer
+  border      : 1px solid lightgrey !important
+  padding     : 3px !important
+  margin-left : 5px
 
 .sagews-editor-latex-raw
   border     : 1px solid lightgrey
@@ -335,6 +335,7 @@
 
 .sagews-editor-latex-preview
   border: 1px solid black;
+  padding: 12px;
 
 .sagews-output-editor-foreground-color-selector
   cursor: pointer
