html-md editor: first very basic attempt -- half done and not good; will likely delete

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -521,3 +521,16 @@ code
   width: 6px
   &:hover
     background: #ddd
+
+.salvus-editor-resize-bar-layout-2, .salvus-editor-html-md-resize-bar
+  cursor: ew-resize
+  background: #efefef
+  width: 6px
+  &:hover
+    background: #ddd
+
+.salvus-editor-html-md-preview
+  border     : 1px solid black
+  padding    : 12px
+  background : white
+  position   : absolute
