html editor: basic display of selections

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -530,9 +530,17 @@ code
     background: #ddd
 
 .salvus-editor-html-md-preview
-  border     : 1px solid black
+  border     : 1px solid lightgrey
   padding    : 12px
   background : white
   position   : absolute
   overflow   : auto
+  margin-top : -10px   // horrible temporary hack
+
+.smc-html-selection
+  background-color: lightgrey
+
+.smc-html-cursor
+  border-left: 1px solid black
+  margin-right: -1px
 
