html/markdown editor: lots of tiny cleanups and improvements to make it usable!

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -539,6 +539,7 @@ code
 
 .smc-html-selection
   background-color: lightgrey
+  border: 1px solid lightgrey
 
 .smc-html-cursor
   border-left: 1px solid black
