html-md-etc editor: add some support for tex, rst, wiki

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -11,6 +11,10 @@
   padding: 0
   background: white
 
+  // get rid of bootstrap's width: 100% for .table elements in the editor content
+  .table
+    width: auto
+
 .salvus-editor-close-button-x
   font-size: 14px
   margin-top: 9px
