editor -- keyboard shortcuts; wiki markup; special symbols

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -549,3 +549,5 @@ code
   border-left: 1px solid black
   margin-right: -1px
 
+.salvus-html-editor-symbols-dialog td:hover
+  background: lightblue
