button bar -- stabilize and polish content; fix misc issues

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -551,3 +551,8 @@ code
 
 .salvus-html-editor-symbols-dialog td:hover
   background: lightblue
+
+.salvus-editor-codeedit-buttonbar-mode
+  background: #fafafa
+  padding: 4px
+  border: 1px solid #ddd
