--- a/salvus/page/index.sass
+++ b/salvus/page/index.sass
@@ -196,3 +196,6 @@ input[type="text"], select, input[type="email"], select, input[type="password"],
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAACCAYAAAB/qH1jAAAABmJLR0QA/wD/AP+gvaeTAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH3QUXCToH00Y1UgAAACFJREFUCNdjPMDBUc/AwNDAAAFMTAwMDA0OP34wQgX/AQBYgwYEx4f9lQAAAABJRU5ErkJggg==)
   background-position: bottom left
   background-repeat: repeat-x
+
+*[data-toggle*="collapse"]
+  cursor:pointer
