animation: when using webm use a raw file, since otherwise it won't repeat.

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -381,6 +381,11 @@
   background: white
   /* so that, e.g., latex with transparent background is visible */
 
+.sagews-output-video
+  cursor: pointer
+  background: white
+  border: 1px solid lightgrey
+
 .sagews-output-link
   cursor: pointer
 
