wizard: disabling user-select in dialog except for those two boxes (user-select should be disabled much more often)

--- a/salvus/page/_wizard.sass
+++ b/salvus/page/_wizard.sass
@@ -1,6 +1,8 @@
 .smc-wizard
+  +disable-user-select
   > div
-    min-width: 75vw
+    // min-width: 75vw
+    width: 900px
 
     > div.modal-content
 
@@ -29,3 +31,4 @@
         pre.code
           height:200px
           overflow:auto
+          +enable-user-select
