wizard: small UI fixes and enhancements (badge), some initial content about python

--- a/salvus/page/_wizard.sass
+++ b/salvus/page/_wizard.sass
@@ -1,6 +1,6 @@
 .smc-wizard
   +disable-user-select
-  > div
+  > div.modal-dialog
     // min-width: 75vw
     width: 900px
 
@@ -32,3 +32,10 @@
           height:200px
           overflow:auto
           +enable-user-select
+
+      > div.modal-footer
+        padding: 10px
+
+  span.badge
+    background-color: #eee
+    color: #428bca
