wizard: adding more entries, simplifying code, attribution for copyright, anchors by default external, using bootstraps scrollintoview(), and some style fixes

--- a/salvus/page/_wizard.sass
+++ b/salvus/page/_wizard.sass
@@ -31,6 +31,12 @@
       height:200px
       overflow:auto
       +enable-user-select
+      .attr,
+      .attr a
+        font-size: 9px
+        color: grey
+        margin-top: 30px
+        text-align: right
 
   div.modal-footer
     padding: 10px
