--- a/salvus/page/_wizard.sass
+++ b/salvus/page/_wizard.sass
@@ -5,9 +5,9 @@
     width: 900px
 
   div.modal-header
-    h2
-      margin-top: 10px
-    .nav-pills
+    h2,
+    .nav-pills,
+    .smc-wizard-search
       margin-top: 10px
     .btn-close
       margin-top: 10px
