snapshot of work in progress on billing code

--- a/salvus/page/_account.sass
+++ b/salvus/page/_account.sass
@@ -40,3 +40,11 @@
   width: 1.5em
   margin-top: 7px
   color: #002E9F
+
+.smc-billing-panel-row
+  border-bottom: 1px solid #eee;
+  margin-bottom: 1em;
+  padding-bottom: 1em;
+
+.smc-billing-history-row
+  color : #888;
