panelize projects -- finish that

--- a/salvus/page/_project.sass
+++ b/salvus/page/_project.sass
@@ -464,3 +464,8 @@
 
 .salvus-settings-url
   font-size: 10pt
+
+.smc-upgrade-project
+  border-bottom  : 1px solid #ddd
+  margin-bottom  : 1em
+  padding-bottom : 1em
