--- a/salvus/page/_account.sass
+++ b/salvus/page/_account.sass
@@ -1,7 +1,7 @@
 .popover-create-account
   width: 200px
   background-color: #ff0077
-  opacity: 0.5
+  opacity: 0.9
 
 .account-error-text
   color: #ff0000
@@ -39,7 +39,8 @@
   font-size: 16pt
   width: 1.5em
   margin-top: 7px
-  color: #002E9F
+  color: green
+  //color: #002E9F
 
 .smc-billing-panel-row
   border-bottom: 1px solid #eee;
