--- a/salvus/page/_account.sass
+++ b/salvus/page/_account.sass
@@ -35,12 +35,12 @@
 #link-terms
   top: 0
 
-.salvus-landing-icon
+.smc-landing-icon
   font-size: 16pt
   width: 1.5em
   margin-top: 7px
-  color: green
-  //color: #002E9F
+  //color: green
+  color: #002E9F
 
 .smc-billing-panel-row
   border-bottom: 1px solid #eee;
