--- a/salvus/page/index.sass
+++ b/salvus/page/index.sass
@@ -213,3 +213,9 @@ input[type="text"], select, input[type="email"], select, input[type="password"],
 
 *[data-toggle*="collapse"]
   cursor:pointer
+
+/* Fix menubar height at the top of the screen, mainly on Firefox. */  
+ul.nav.pull-right.navbar-nav li
+  height: 42px
+
+
