--- a/salvus/page/_jupyter.sass
+++ b/salvus/page/_jupyter.sass
@@ -12,10 +12,24 @@
   width: 100%
   left: 0px;
 
-.smc-jupyter-notebook-buttons
+.smc-jupyter-notebook-buttons-hidden-xs
   position: absolute
   top: 7px
   right: 7px
+
+.smc-jupyter-notebook-history-slider-controls
+  position: absolute
+  top: 8px
+  right: 5px
+  width: 80%
+  background: white
+  border: 2px solid orange
+  border-radius: 4px
+  padding: 20px
+  box-shadow: 5px 6px 4px lightgray
+
+.smc-jupyter-notebook-history-slider
+  margin-top: 11px;
 
 .smc-jupyter-notebook-status-messages
   font-size: 10pt
@@ -25,3 +39,9 @@
   font-weight: bold
   font-size: 7pt
   background: red
+
+.smc-jupyter-history-revision-number
+  font-size:10pt
+
+.smc-jupyter-history-revision-time
+  font-size:10pt
