react: working on making projects component work -- looking better, but needs details

--- a/salvus/page/_top_navbar.sass
+++ b/salvus/page/_top_navbar.sass
@@ -13,13 +13,13 @@
   // No more box shadow
 
 .nav
-  &.projects li.ui-sortable-helper
+  &.smc-projects li.ui-sortable-helper
     color: #555555
     text-decoration: none
     background-color: #ffffff
   &.pull-right
     float: right
-  &.projects
+  &.smc-projects
     float: none !important
     // override Bootstrap 3
     overflow: hidden
