course: Files button when in small mode

--- a/salvus/page/index.sass
+++ b/salvus/page/index.sass
@@ -109,6 +109,17 @@ body
   .salvus-responsive-mode-test
     width: 10000px
 
+
+@media (max-width: 767px)
+  .smc-big-only
+    display:none
+
+@media (min-width: 768px)
+  .smc-small-only
+    display:none
+
+
+
 .ui-pnotify-history-container
   position: fixed
 
