file_use: mainly  cursor and enter to open first thing in notification search -- like in log

--- a/salvus/page/_activity.sass
+++ b/salvus/page/_activity.sass
@@ -20,11 +20,11 @@
   background: white
 
 .salvus-notification-list
-  width: 40%
+  width: 60%
   z-index: 10
   margin-left: 0px
   position: fixed
-  box-shadow: 0px 0px 7px #aaa
+  box-shadow: 0px 0px 15px #aaa
   border: 2px solid #ccc
   top: 43px
   background: white
@@ -33,6 +33,7 @@
   overflow-x: hidden
   font-size: 10pt
   padding: 4px
+  border-radius: 5px
 
 @media (max-width: 767px)
   .salvus-notification-list
