Add a scrollbar to menus when the screen is too small

--- a/salvus/page/index.sass
+++ b/salvus/page/index.sass
@@ -183,6 +183,13 @@ input[type="text"], select, input[type="email"], select, input[type="password"],
   .navbar-collapse, .navbar-form
     position: relative
     top: 1px
+    
+/* Add a scrollbar to menus when the screen is too small 
+ * A manu cannot be taller than 60% of the screen, a scrollbar is added if it's the case
+ */
+.dropdown-menu
+  max-height: 60vh
+  overflow-y: auto
 
 /* Make math visible even when there is a dark background.  Since mathjax is always black, this
  * helps a lot.  Obviously, it isn't perfect, but it is better than USELESS. '
