--- a/salvus/page/index.sass
+++ b/salvus/page/index.sass
@@ -180,8 +180,8 @@ input[type="text"], select, input[type="email"], select, input[type="password"],
   .navbar-collapse, .navbar-form
     position: relative
     top: 1px
-    
-/* Add a scrollbar to menus when the screen is too small 
+
+/* Add a scrollbar to menus when the screen is too small
  * A manu cannot be taller than 60% of the screen, a scrollbar is added if it's the case
  */
 .dropdown-menu
@@ -223,4 +223,12 @@ input[type="text"], select, input[type="email"], select, input[type="password"],
 ul.nav.pull-right.navbar-nav li
   height: 42px
 
+/* Prevent text from selecting when holding shift to select a range in the project files */
+.noselect
+  -webkit-touch-callout : none;
+  -webkit-user-select   : none;
+  -khtml-user-select    : none;
+  -moz-user-select      : none;
+  -ms-user-select       : none;
+  user-select           : none;
 
