--- a/salvus/page/index.sass
+++ b/salvus/page/index.sass
@@ -232,3 +232,17 @@ ul.nav.pull-right.navbar-nav li
   -ms-user-select       : none;
   user-select           : none;
 
+.grow
+  transition: all .1s ease-in-out;
+  -webkit-transition : -webkit-transform .1s ease-in;
+  -moz-transition    : -moz-transform .1s ease-in;
+  -o-transition      : -o-transform .1s ease-in;
+  transition         : transform .1s ease-in;
+
+  &:hover
+    -webkit-transform : scale(1.1);
+    -moz-transform    : scale(1.1);
+    -ms-transform     : scale(1.1);
+    -o-transform      : scale(1.1);
+    transform         : scale(1.1);
+
