customize: make it so changing the customize store changes the page (via components and some old jQuery)

--- a/salvus/page/_account.sass
+++ b/salvus/page/_account.sass
@@ -39,8 +39,7 @@
   font-size: 16pt
   width: 1.5em
   margin-top: 7px
-  //color: green
-  color: #002E9F
+  color: #428BCA
 
 .smc-billing-panel-row
   border-bottom: 1px solid #eee;
