--- a/salvus/page/_help.sass
+++ b/salvus/page/_help.sass
@@ -11,6 +11,10 @@
 
 .salvus-help-list
   margin-top: .7ex
+  border: 1px solid lightgrey
+  padding: 15px
+  border-radius: 5px
+  background-color: #f8f8f8
 
 .salvus-a
   color: #08c
