rewriting sage worksheets, etc., to properly use upstream npm-installed codemirror.  Use propery lineWidgets instead of a hack around replaceRange

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -285,7 +285,6 @@
 
 .sagews-input
   white-space: nowrap
-  margin-left: -4px
   width: 100%
 
 .sagews-input-live:hover
@@ -333,7 +332,6 @@
   margin: 0px
   white-space: normal
   border-left: 3px solid orange
-  margin-left: -4px
 
 .sagews-output-edit-button-group
   visibility: hidden
@@ -577,3 +575,6 @@ code
 .sagews-output-raw_input
   font-family: sans-serif
   margin: 1em
+
+.CodeMirror-linewidget
+  overflow: hidden
