sagews: remove some ugly hacks that are no longer needed (and make things much worse)

--- a/salvus/page/_editor.sass
+++ b/salvus/page/_editor.sass
@@ -332,6 +332,7 @@
   margin: 0px
   white-space: normal
   border-left: 3px solid orange
+  word-wrap: break-word
 
 .sagews-output-edit-button-group
   visibility: hidden
