misc fixes to sage worksheets: double the speed (latency in half); always update output uuid so output doesn't overwrite; etc.

--- a/salvus/smc-webapp/_editor.sass
+++ b/salvus/smc-webapp/_editor.sass
@@ -287,6 +287,7 @@
   white-space: nowrap
   width: 100%
   margin-top: -1ex
+  margin-bottom: 5px
 
 .sagews-input-live:hover
   cursor: pointer
@@ -334,6 +335,7 @@
   white-space: normal
   border-left: 5px solid orange
   word-wrap: break-word
+  min-height: 28px
 
 .sagews-output-edit-button-group
   visibility: hidden
